--- a/Frontend/src/pages/Medical/Medical.module.css
+++ b/Frontend/src/pages/Medical/Medical.module.css
@@ -5,7 +5,7 @@
 .header {
     width: 100vw;
     height: 5vh;
-    background-color: aqua;
+    background-color: #4caf50;
     text-align: center;
     font-size: 24px;
 }
