--- a/Frontend/src/pages/Shop/Shops.module.css
+++ b/Frontend/src/pages/Shop/Shops.module.css
@@ -1,44 +1,43 @@
 :root {
-	--pri-clr: #9f81fb4d;
-	--sec-clr: #a991f04d;
+    --pri-clr: #9f81fb4d;
+    --sec-clr: #a991f04d;
 }
 
 .home-container {
-	width: 100%;
-	padding: 8em;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #e6e6f7;
+    width: 100%;
+    padding: 8em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e6e6f7;
 }
-.h1{
+.h1 {
     text-align: center;
 }
 
 .login-message {
-	padding-top: 200px;
-	font-family: "Bona Nova";
-	font-size: 35px;
-	font-weight: 700;
+    padding-top: 200px;
+    font-family: 'Bona Nova';
+    font-size: 35px;
+    font-weight: 700;
 }
 
 @media only screen and (max-width: 768px) {
-	.home-container {
-		padding: 4em;
-	}
+    .home-container {
+        padding: 4em;
+    }
 }
-.login-error
-{
-	width: 100%;
-	height: 100vh;
-	color: #000;
-	font-size: xx-large;
-	font-family: "Poppins", sans-serif;
-	text-align: center;
-	background-color: #e6e6f7;
+.login-error {
+    width: 100%;
+    height: 100vh;
+    color: #000;
+    font-size: xx-large;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    background-color: #e6e6f7;
 }
 .title {
-	width: fit-content;
-	margin: auto;
-	margin-top: 20px;
+    width: fit-content;
+    margin: auto;
+    margin-top: 20px;
 }
